Thu Nov 21 22:30:15 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/convert_tds2sql.c: add support for SQLGUID
	* include/tds.h src/odbc/odbc.c src/tds/mem.c src/tds/query.c:
	- renames new_params to params

Thu Nov 21 16:01:27 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* src/ctlib/ct.c:
	- Fix return value from ct_cancel().

Thu Nov 21 21:48:13 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/token.c:
	- cleanup old unused functions
	- reuse code
	- added some TODO/FIXME
	* src/tds/query.c:
	- use symbolic constant

Thu Nov 21 15:18:57 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: workaround for old Sybase and SQLGetTypeInfo

Thu Nov 21 13:49:04 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: tell we support SQLDriverConnect

Thu Nov 21 11:47:19 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/connect.c src/odbc/unittests/Makefile.am:
	- added test to test connections
	* src/odbc/unittests/common.c:
	- improve Disconnect
	* src/odbc/connectparams.c: reindented

Thu Nov 21 11:18:03 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/connectparams.c src/odbc/odbc.c:
	- handle DSN option in connectstring 

Wed Nov 20 23:07:12 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c:
	- rewrite tds_query_submit using new functions
	- added some comment

Wed Nov 20 17:36:47 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: continue parameters code

Wed Nov 20 14:29:43 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/freebcp.c src/apps/freebcp.h src/ctlib/blk.c:
	* src/ctlib/cs.c src/ctlib/ctutil.c src/tds/vstrbuild.c:
	- indent(1) and a conversion to Unix file style

Mon Nov 18 21:08:54 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h: small doxygen comment

Sun Nov 17 13:37:44 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c src/tds/query.c: